<resources>
    <string name="app_name">Billing</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_10000">10000</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add_remove_itemDetails_header">When You Upload Item which Details add to The Item. Please selected details below.</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="item_size">Item Size</string>
    <string name="item_color">Item Color</string>
    <string name="item_expiry_date">Item Expiry Date</string>
    <string name="item_description">Item Description</string>
    <string name="item_count">Item Count</string>
    <string name="item_brand_name">Item Brand Name</string>
    <string name="add_item">Add Item</string>
    <string name="modify_item">Modify Item</string>
    <string name="view_item">View Item</string>
    <string name="move_item">Move Item</string>


    <string name="delete_item">Delete Item</string>
    <string name="type_here">Type here</string>
    <string name="upload">Upload</string>
    <string name="add_details">Add Details</string>
    <string name="todo">TODO</string>
    <string name="id">ID</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
        @string/app_name
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-4677653884207549~8179589809</string>
    <string name="computer_internet"><![CDATA[Computer, Internet & Digital]]></string>
    <string name="sort_by">Sort By</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="tech_guru">Tech Guru</string>
    <string name="mmm">\@drawable/restu_table</string>
    <string name="my_gmail">uttam1bahadur@gmail.com</string>
    <string name="silicon_marketing_india"><u>SILICON MARKETING INDIA</u></string>
    <string name="no_name">No Name</string>
    <string name="empty">(Empty)</string>
    <string name="waiter">Waiter</string>
    <string name="waiter_list"><u>Waiter List</u></string>
    <string name="report">Report</string>
    <string name="company_mail_address">silicon.marketing@gmail.com</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="sub_item_list">Sub Item List</string>
    <string name="a2z">abcdefghijklmnopqrstuvwxyz</string>
    <string name="company_name_kot">SILICON MARKETING INDIA</string>
    <string name="tax">Tax</string>
    <string name="gst"><![CDATA[CGST @ 2.5% + SGST @ 2.5%]]></string>
    <string name="smi"><u>SILICON</u></string>
</resources>
