<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_item"
            android:icon="@drawable/add_item"
            android:title="Add Item" />
        <item
            android:id="@+id/viewBill"
            android:icon="@drawable/ic_bill"
            android:title="View Bill" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_waiter"
            android:icon="@drawable/ic_waiter"
            android:title="@string/waiter" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/report" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/empty" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/empty" />
        </menu>
    </item>

</menu>
